fix: blurred bg

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,28 +8,16 @@ body {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  postition: relative;
   overflow-x: hidden;
-
-  /* background-color: rgba(9, 13, 45, 1); */
+  background-image: url("../public/images/bg.jpg");
+  background-size: 100% 100vh;
 }
-
-body::before {
-  filter: blur(30px);
-  background-image: url("https://thumbs.dreamstime.com/b/dark-futuristic-sci-fi-glass-tunnel-d-illustration-background-wallpaper-future-scifi-glass-building-d-rendering-design-dark-159545882.jpg");
-  transform: scale(1.1);
-  /* background-repeat: repeat-y; */
-  background-size: cover;
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  z-index: -1;
+main {
+  backdrop-filter: blur(30px);
 }
 
 .text-gradient {
   background: linear-gradient(to right, #30cfd0, #c43ad6);
-  /* background: linear-gradient(to right, #30cfd0, rgb(74, 222, 168)); */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
